Work on slider : - Refactored some code + css - Fixed behaviour on firefox

--- a/src/Components/ProjectCard/projectCard.scss
+++ b/src/Components/ProjectCard/projectCard.scss
@@ -39,7 +39,6 @@
     &__image{
         width: 100%;
         height: 100%;
-        -webkit-user-drag: none;
         object-fit: cover;
         transition: all 0.8s;
 
@@ -48,11 +47,8 @@
             filter: blur(4px);
         }
     }
-    &-broken{
+    &-jsDisabled{
         pointer-events: none;
-    }
-    
-    .-active{
         cursor: grabbing;
     }
 }
